[gd_scene load_steps=3 format=3 uid="uid://dveymygjdbsyw"]

[ext_resource type="Theme" uid="uid://crcivs73grrf7" path="res://textures/hud/custom_theme.tres" id="1_0b34x"]
[ext_resource type="Script" uid="uid://ciosx7olmww5x" path="res://misc/hud/settings_menu/gameplay_menu.gd" id="2_0e030"]

[node name="GameplayMenu" type="PanelContainer" node_paths=PackedStringArray("first_selection")]
custom_minimum_size = Vector2(380, 300)
offset_right = 380.0
offset_bottom = 300.0
theme = ExtResource("1_0b34x")
script = ExtResource("2_0e030")
first_selection = NodePath("GridContainer/SelectionColor")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="SelectionColor" type="ColorPickerButton" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../SupportColor")
focus_neighbor_bottom = NodePath("../AttackColor")
focus_next = NodePath("../AttackColor")
focus_previous = NodePath("../SupportColor")

[node name="SelectionColorLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Selection Indicator Color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackColor" type="ColorPickerButton" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../SelectionColor")
focus_neighbor_bottom = NodePath("../SupportColor")
focus_next = NodePath("../SupportColor")
focus_previous = NodePath("../SelectionColor")

[node name="AttackColorLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Attack Indicator Color"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SupportColor" type="ColorPickerButton" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../AttackColor")
focus_neighbor_bottom = NodePath("../SelectionColor")
focus_next = NodePath("../SelectionColor")
focus_previous = NodePath("../AttackColor")

[node name="SupportColorLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Support Indicator Color"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="color_changed" from="GridContainer/SelectionColor" to="." method="selection_color_changed"]
[connection signal="color_changed" from="GridContainer/AttackColor" to="." method="attack_color_changed"]
[connection signal="color_changed" from="GridContainer/SupportColor" to="." method="support_color_changed"]
